[package]
name = "gh-projects-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { path = "../ratatui", features = ["widget-calendar"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
ron = "0.8.1"
tui-input = "0.8.0"
reqwest = { version = "0.11.22" , features = ["json"]}
rand = { version = "0.8.5", features = [] }
github-device-flow = {path="../device-flow/gh-device-flow/"}
anyhow = "1.0.76"
chrono = "0.4.31"
time = { version = "0.3.31", features = ["parsing", "formatting"]}
time-macros = { version = "0.2.0-alpha.1" }

[profile.dev]
opt-level = 0

