[package]
name = "gh_projects_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["widget-calendar"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22" , features = ["json"]}
github-device-flow = { url = "https://github.com/rhaskia/github-device-flow" } # update this once PR done
anyhow = "1.0.76"
time = { version = "0.3.31", features = ["parsing", "formatting"]}
confy = "0.5.1"

[profile.dev]
opt-level = 0
